2025-04-02T00:52:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14209088497 # 601
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-02
* notice: last 14d: unq all: 4 5
* notice: prev accum: outdated-unq outdated-all / unq all: 498 891 / 503 896
* notice: next accum: outdated-unq outdated-all / unq all: 499 892 / 504 897
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-03-18] / [2025-04-01]

2025-04-01T00:58:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14184644019 # 600
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-01
* notice: last 14d: unq all: 4 5
* notice: prev accum: outdated-unq outdated-all / unq all: 486 879 / 500 893
* notice: next accum: outdated-unq outdated-all / unq all: 498 891 / 503 896
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-03-07 2025-03-08 2025-03-09 2025-03-11 2025-03-12 2025-03-13 2025-03-14 2025-03-15 2025-03-16 2025-03-17] / [2025-03-20 2025-03-22]

2025-03-20T01:04:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13959778838 # 599
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-20
* notice: last 14d: unq all: 5 14
* notice: prev accum: outdated-unq outdated-all / unq all: 485 878 / 499 892
* notice: next accum: outdated-unq outdated-all / unq all: 486 879 / 500 893
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-03-06] / [2025-03-19]
