@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-04-02T00:52:37Z",
-  "count_outdated" : 892,
-  "uniques_outdated" : 499,
-  "count" : 897,
-  "uniques" : 504,
+  "timestamp" : "2025-04-03T00:51:42Z",
+  "count_outdated" : 893,
+  "uniques_outdated" : 500,
+  "count" : 898,
+  "uniques" : 505,
   "clones" : [
-    {
-      "timestamp": "2025-03-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-03-20T00:00:00Z",
       "count": 2,
@@ -34,6 +25,15 @@
     },
     {
       "timestamp": "2025-04-01T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-04-02T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
