@@ -3,11 +3,6 @@
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2025-03-19T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-03-20T00:00:00Z",
       "count": 2,
       "uniques": 2
@@ -19,6 +14,11 @@
     },
     {
       "timestamp": "2025-04-01T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-04-02T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
