@@ -1,3 +1,12 @@
+2025-04-03T00:51:42Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14232539644 # 602
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-03
+* notice: last 14d: unq all: 4 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 499 892 / 504 897
+* notice: next accum: outdated-unq outdated-all / unq all: 500 893 / 505 898
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-03-19] / [2025-04-02]
+
 2025-04-02T00:52:37Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14209088497 # 601
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-02
